<resources>
    <string name="contract_address">0xc7c44c64DBddA29e2723FD1056ab876A54ef24CE</string>
    <string name="app_name">BowHeadChallenge</string>
    <string name="introscreen_start">START</string>
    <string name="introscreen_subtitle">Wellness logger</string>
    <string name="introscreen_createpassword">Create a Password</string>
    <string name="introscreen_createPassword_bottomButton_text">Let´s Go!</string>
    <string name="introscreen_passwordHint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitscreen_submitText">Submit</string>
    <string name="fillform_title">Track your wellness</string>
    <string name="fillform_howDoYouFeel">How do you feel?</string>
    <string name="fillform_howDoYouFeel_goodAnswer">Perfect, thank you!</string>
    <string name="fillform_howDoYouFeel_regularAnswer">Meh, I´m alive</string>
    <string name="fillform_howDoYouFeel_badAnswer">Worst day ever</string>
    <string name="fillform_sleepWell">Did you sleep well?</string>
    <string name="yes">Yes</string>
    <string name="bowhead_yes">Yes</string>
    <string name="bowhead_no">No</string>
    <string name="logs_title">Answer logs</string>
    <string name="logs_feeling">Feeling:</string>
    <string name="logs_sleepQuality">Sleep quality:</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>