<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormFragment">

    <!-- PROBLEM ** workaround to display selector in radio button:  app:useMaterialThemeColors="false"
                material design library issue:https://github.com/material-components/material-components-android/issues/889 -->

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/fillform_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/fillform_submitButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="@dimen/introscreen_bottomButton_width"
        android:layout_height="@dimen/introscreen_bottomButton_height"
        android:layout_marginBottom="110dp"
        android:elevation="10dp"
        android:enabled="false"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/submitscreen_submitText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/fillform_submitButton"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-76dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/app_paddingStartLeft"
            android:paddingEnd="@dimen/app_paddingStartLeft">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fillform_sleepWell"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/fillform_radioGroup_feel"
                tools:layout_editor_absoluteX="46dp" />

            <RadioGroup
                android:id="@+id/fillform_radioGroup_feel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:layout_editor_absoluteX="21dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/fillform_howDoYouFeel_badAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:button="@drawable/bowhead_radio_button"
                    android:checked="false"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="true"
                    android:paddingLeft="@dimen/radioButton_paddingToText"
                    android:text="@string/fillform_howDoYouFeel_badAnswer"
                    android:textColor="@color/black"
                    app:useMaterialThemeColors="false"
                    tools:layout_editor_absoluteX="5dp"
                    tools:layout_editor_absoluteY="140dp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/fillform_howDoYouFeel_regularAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:button="@drawable/bowhead_radio_button"
                    android:checked="false"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="true"
                    android:paddingLeft="@dimen/radioButton_paddingToText"
                    android:text="@string/fillform_howDoYouFeel_regularAnswer"
                    android:textColor="@color/black"
                    app:useMaterialThemeColors="false"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="76dp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/fillform_howDoYouFeel_goodAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:button="@drawable/bowhead_radio_button"
                    android:checked="false"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="true"
                    android:paddingLeft="@dimen/radioButton_paddingToText"
                    android:text="@string/fillform_howDoYouFeel_goodAnswer"
                    android:textColor="@color/black"
                    app:useMaterialThemeColors="false"
                    tools:layout_editor_absoluteX="176dp"
                    tools:layout_editor_absoluteY="140dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fillform_howDoYouFeel"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/filllform_radioGroup_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:layout_editor_absoluteX="-13dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/bowhead_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:button="@drawable/bowhead_radio_button"
                    android:checked="false"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="true"
                    android:paddingLeft="@dimen/radioButton_paddingToText"
                    android:text="@string/bowhead_yes"
                    android:textColor="@color/black"
                    app:useMaterialThemeColors="false"
                    tools:layout_editor_absoluteX="140dp"
                    tools:layout_editor_absoluteY="245dp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/bowhead_no"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:button="@drawable/bowhead_radio_button"
                    android:checked="false"
                    android:fontFamily="@font/poppins"
                    android:includeFontPadding="true"
                    android:paddingLeft="@dimen/radioButton_paddingToText"
                    android:text="@string/bowhead_no"
                    android:textColor="@color/black"
                    app:useMaterialThemeColors="false"
                    tools:layout_editor_absoluteX="144dp"
                    tools:layout_editor_absoluteY="293dp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="118dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/bowhead_fillform_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>